@@ -86,6 +86,28 @@ source directory and apply the new patch with the command:</p>
 
 <p><code>cvs -q update -d</code></p>
 
+<a name="editSettings"></a>
+<h2><u>Editing the application settings manually</u></h2>
+
+<p>
+Developers will sometimes need to search and even edit the Qtstalker settings.
+The user settings are persisted using platform-dependent mechanisms.
+</p>
+<p>
+On most platforms they are stored in the <code>~/.qt/qtstalkerrc</code> plain-text file. Edit, save, and re-start Qtstalker.
+</p>
+<p>
+On "Mac OS X" they are stored in a binary plist. To view/edit, do the following
+and then re-start Qtstalker:
+</p>
+<pre>
+cp /Library/Preferences/com.Qtstalker.plist $WORK/qtstalker/com.Qtstalker.plist.save
+plutil -convert xml1 -o $WORK/qtstalker/qtstalker.plist /Library/Preferences/com.Qtstalker.plist
+vi $WORK/qtstalker/qtstalker.plist
+plutil -convert binary1 -o $WORK/qtstalker/qtstalker.plist.bin $WORK/qtstalker/qtstalker.plist
+mv $WORK/qtstalker/qtstalker.plist.bin /Library/Preferences/com.Qtstalker.plist
+</pre>
+
 <p><a href="vola.html" target="_self"><img src="back.png" border="0"
 width="32" height="32" alt="Back" /></a> <a href="toc.html"><img
 src="home.png" border="0" width="32" height="32" alt="Home" /></a></p>
